assets/css/style.css
/* Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Roboto+Slab&display=swap');

*{
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Roboto Condensed', sans-serif;
    background: #043c8f;
}

/* Logo, Menu and Headings */

h1, h2 {
    font-family: 'Roboto Slab', sans-serif;
    color: #db970f;
}

h2 {
    font-size: 125%;
}

#logo {
    padding: 1%;
    float: left;
    font-size: 250%;
    text-decoration: overline;
    background-color: #0f61db;
    border: #043c8f solid 1px;
}

#menu {
    float: right;
    list-style-type: none;
    margin: 0;
    padding: 1%;
    display: inline;
    font-size: 110%;
    letter-spacing: 2px;
    color: #db970f;
    background-color: #0f61db;
    font-weight: bold;
    border: #043c8f solid 1px;
}

li {
    float: left;
    margin-right: 25px;
}

#menu a {
    color: inherit;
    text-decoration: none;
}

.active {
    border-bottom: solid 2px #db970f;
}

#menu a:hover {
    border: solid 2px #db970f;
}

#menu, #logo {
    line-height: 50px;
}

/* Hero Image */

#hero-image {
    clear: both;
    display: flex;
}

#heroimage1 > img, #heroimage2 > img {
    width: 100%;
    height: auto;
}

/* Index About Us*/

#aboutus {
    width: 50%;
    height: 40%;
    text-align: center;
    margin: auto;
    clear: both;
    font-size: 150%;
    background-color: #0f61db;
    color: #db970f;
}

#aboutus h2{
   text-decoration: underline;
   font-size: 120%;
}

/* Index Reviews */

#reviews {
        font-size: 120%;
        text-transform: uppercase;
        margin: auto;
        text-align: center;
        background-color: #0f61db;
        width: 45%;
}


/* Services */

#trade-services {
    margin: auto;
    text-align: center;
    clear: both;
    background-color: #0f61db;
    width: 45%;
    color: #db970f;
    border: #043c8f solid 1px;
}

#trade-services > h2 {
    font-size: 180%;
    text-decoration: underline;
}

#plumbing-electric {
    display: grid;
    grid-template-columns: 1fr 1fr;
    clear:both;
}

#plumbing-services {
    background: url(../images/plumbing_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;
}

#electrical-services {
    background: url(../images/electrician_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;

}

#plumbing-services, #electrical-services {
    color: white;
    font-size: 120%;
}

#plumbing-services > h3, #electrical-services > h3 {
    font-size: 150%;
    text-decoration: underline;
    background-color: rgba(15, 97, 219, .7);
    width: 55%;
    height: 20%;
}

.service-list {
    display: block;
    background-color: rgba(15, 97, 219, .7);
    width: 55%;
    height: 50%;
}

.service-list > li {
    float: left;
    clear: left;
    list-style-type: square;
    list-style-position: inside;
}

#why-plumb div , #why-elect div {
    width: 75%;
    height: 10%;
    border: #043c8f solid 1px;
}

#why-plumb h4, #why-elect h4 {
    text-decoration: underline;
    font-weight: bold;
}


#p1, #p3, #p5, #e1, #e3, #e5 {
    float: left;
    text-align: left;
    clear: both;
    margin: auto;
    width: 20%;
    height: 10%;
    background-color: #0f61db;
    color: #db970f;
    
}

#p2, #p4, #p6, #e2, #e4, #e6 {
    float: right;
    text-align: right;
    clear: both;
    margin: auto;
    width: 50%;
    height: auto;
    background-color: #0f61db;
    color: #db970f;
   
}


/* Gallery */

#photos {
    display: flex;
    flex-wrap: wrap;
    width: 100vw;
    height: auto;
}

#photos > img {
    width: 25%;
    height: auto;
    flex: 0 1 25%;
}

/* Contact Form */

#contact-section {
    clear: both;
    background: url("/assets/images/van.jpg") no-repeat;
    background-size: cover;
    background-position: center;
    height: 900px;
}

#contact-form {
    background-color: rgba(15, 97, 219, .7);
    height: 40%;
    width: 50%;
    margin: auto;
    text-align: center;
    color: white;
    clear: both;
    position: relative;
    top: 10%;
    padding-top: 1%;
}

.job-input {
    background: transparent;
    border: 1px solid white;
    color: white;
    padding-top: 5px;
}

.quote-button {
    background-color: #8f5f00;
    color: white;
    font-size: 100%;
    padding: 10px 10px 10px 10px;
    border: 1px solid white;
    margin-top: 10px;
}

.quote-button:hover {
    background-color: white;
    color: #8f5f00;
}

/* Footer */

footer {
 display: table;
 text-align: center;
 margin: auto;
 clear: both;
}

footer > ul {
    list-style-type: none;
}

.medialinks i {
    font-size: 300%;
    margin: 5px;
    padding: 5px;
    color: #8f5f00;
}

/* Media Queries */

/* for smaller screens 480px and smaller */

@media screen and (max-width: 480px) {

/* Logo and Menu */

    #logo {
        text-align: center;
        font-size: 250%;
        margin: auto;
    }
    
    #menu {
        list-style-type: none;
        margin: 0;
        padding: 0;
        font-size: 100%;
        letter-spacing: 1px;
        margin: auto;
    }
    
    li {
        
        margin-right: 20px;
    }
   
/* Hero Image */

#hero-image {
    clear: both;
    display: inline;
}

#heroimage1 > img, #heroimage2 > img {
    width: 100%;
    height: auto;
}

/* About us */

#aboutus {
    width: 95%;
    height: 30%;
    text-align: center;
    border: solid 1px black;
    font-size: 120%;
    margin:auto;
    clear: both;

    }

/* Index Reviews */

iframe {

    width: 95%;
    height: 30%;
}

/* Services */

#trade-services {
    margin: auto;
    text-align: center;
    clear: both;
}

#trade-services > h2 {
    font-size: 180%;
    text-decoration: underline;
}

#plumbing-electric {
    display: inline;
    clear: both;
}

#plumbing-services {
    background: url(../images/plumbing_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;
}

#electrical-services {
    background: url(../images/electrician_tools.jpg) no-repeat;
    height: 300px;
    width: 100%;
    margin: auto;

}

#plumbing-services > h3, #electrical-services > h3 {
    width: 100%;
    height: 10%;
}

.service-list {
    display: block;
    width: 100%;
    height: 50%;
}

/* Contact Form */

#contact-section {
    clear: both;
    background: url("/assets/images/van.jpg") no-repeat;
    background-size: cover;
    background-position: center;
    height: 900px;
}


/* Footer */

   .medialinks i {
       font-size: 250%;
   }
}

/* for screen sizes between 481px and 768px */

@media screen and (min-width: 481px) and (max-width: 768px) {

    /* Hero Image */

    #hero-image {
        display: inline;
    }

    /* Services */

    #trade-services {
        margin: auto;
        text-align: center;
        clear: both;
    }
    
    #trade-services > h2 {
        font-size: 180%;
        text-decoration: underline;
    }
    
    #plumbing-electric {
        display: inline;
        clear: both;
    }
    
    #plumbing-services {
        background: url(../images/plumbing_tools.jpg) no-repeat;
        height: 300px;
        width: 100%;
        margin: auto;
    }
    
    #electrical-services {
        background: url(../images/electrician_tools.jpg) no-repeat;
        height: 300px;
        width: 100%;
        margin: auto;
    
    }
    
    #plumbing-services > h3, #electrical-services > h3 {
        width: 100%;
        height: 10%;
    }
    
    .service-list {
        display: block;
        width: 100%;
        height: 50%;
    }
}

    /* Contact Form */

/* for  screens sizes between 769px and 1024px */

@media screen and (min-width: 769px) and (max-width: 1024px) {


    #plumbing-services > h3, #electrical-services > h3 {
        font-size: 150%;
        text-decoration: underline;
        width: 60%;
        height: 20%;
    }
    
    .service-list {
        display: block;
        width: 60%;
        height: 50%;
    }
}

/* for  screens sizes between 1025px and 1200px */

@media screen and (min-width: 1025px) and (max-width: 1200px) {

    #plumbing-services > h3, #electrical-services > h3 {
        font-size: 150%;
        text-decoration: underline;
        width: 60%;
        height: 20%;
    }
    
    .service-list {
        display: block;
        width: 60%;
        height: 50%;
    }
}

